--- a/style.css
+++ b/style.css
@@ -1,12 +1,9 @@
 :root {
     --colorPrimario: #ddd;
     --colorSecundario: #000;
-    --colorBoton: #ffda14;
-    --colorBoton2: #897400;
     --colorBoton3: #cccccc;
     --colorBoton4: #4c4c4c;
-    --colorBoton5: #d09156;
-    --colorBoton6: #3d2611;
+    --colorBackground2: #106210;
     --colorBackground: #207720;
     --colorBackgroundGrad: #001400;
     --colorLetras: #ffda14;
@@ -24,7 +21,6 @@ html {
 body {
     background-color: var(--colorBackground);
     color: var(--colorPrimario);
-    min-height: 100%;
     font-family:  'Baskervville', 'Libre Baskerville', serif;
 }
 
@@ -35,23 +31,24 @@ header {
     background-image: linear-gradient(var(--colorBackgroundGrad), var(--colorBackground));
 }
 h1 {
+    padding-top: 2rem;
     font-size: 4rem;
 }
 /* MAIN */
 .label_container {
-    margin: 0 auto;
+    margin: 2rem auto;
     max-width: 800px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    font-size: 2rem;
+    font-size: 1.7rem;
 }
 
 /* CUADRICULA */
 label {
-    padding: 1rem .5rem;
+    padding: 1rem .2rem;
     text-align: center;
     border: 1px var(--colorPrimario) solid;
-    font-size: 2.5rem;
+    background-color: var(--colorBackground2);
 }
 .top-left {
     border-top: 5px var(--colorPrimario) solid;
@@ -88,21 +85,23 @@ label {
 
 /* INPUT */
 .input-num{
-    max-width: 150px;
-    background-color: var(--colorBackground);
+    width: 100%;
+    max-width: 10rem;
+    background-color: var(--colorBackground2);
     color: var(--colorPrimario);
     font-family:  'Baskervville', 'Libre Baskerville', serif;
-    font-size: 2.5rem;
+    font-size: 1.7rem;
     text-align: center;
     border: none;
 }
 
 /*  BOTON */
 .boton-total {
-    width: 150px;
+    height: 4rem;
+    width: 8rem;
     padding: .5rem;
     font-family:  'Baskervville', 'Libre Baskerville', serif;
-    font-size: 2.5rem;
+    font-size: 2rem;
     font-weight: bold;
     background-image: linear-gradient(45deg, var(--colorBoton3) 65%, var(--colorBoton4));
     border-radius: 10px;
@@ -110,7 +109,7 @@ label {
 
 /* FOOTER */
 footer {
-    padding-top: 2rem;
+    padding: 2rem;
     font-size: 3rem;
     text-align: center;
     grid-area: footer;
