--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ html {
     height: 100%;
 }
 body {
+    max-width: 800px;
     background-color: var(--colorBackground);
     color: var(--colorPrimario);
     font-family:  'Baskervville', 'Libre Baskerville', serif;
@@ -26,7 +27,7 @@ body {
 
 /* HEADER */
 header {
-    margin-bottom: 3rem;
+    margin-bottom: 5rem;
     text-align: center;
     background-image: linear-gradient(var(--colorBackgroundGrad), var(--colorBackground));
 }
@@ -35,10 +36,45 @@ h1 {
     font-size: 4rem;
 }
 /* MAIN */
+.fecha_container {
+    margin-bottom: 2.5rem;
+}
+.fecha_label {
+    padding: 1rem;
+    margin-left: 72%;
+    font-size: 2rem;
+    border: 5px var(--colorPrimario) solid;
+    border-radius: 10px;
+}
+
+.tabla_container {
+    max-width: 750px;
+    margin: 0 auto;
+}
 .label_container {
-    margin: 2rem auto;
+    margin: 1rem auto;
     max-width: 800px;
     font-size: 1.7rem;
+}
+.super-data {
+    display: flex;
+}
+.super-label {
+    border-top: 5px var(--colorPrimario) solid;
+    border-bottom: 2.5px var(--colorPrimario) solid;
+}
+.super_left {
+    width: 30%;
+    align-content: center;
+    border-top-left-radius: 10px;
+    border-left: 5px var(--colorPrimario) solid;
+    border-bottom: 2.5px var(--colorPrimario) solid;
+}
+.super_right {
+    width: 30%;
+    border-top-right-radius: 10px;
+    border-right: 5px var(--colorPrimario) solid;
+    border-bottom: 2.5px var(--colorPrimario) solid;
 }
 .main-label {
     display: grid;
@@ -60,17 +96,17 @@ label {
     background-color: var(--colorBackground2);
 }
 .top-left {
-    border-top: 5px var(--colorPrimario) solid;
+    border-top: 2.5px var(--colorPrimario) solid;
     border-left: 5px var(--colorPrimario) solid;
-    border-top-left-radius: 10px;
+    /* border-top-left-radius: 10px; */
 }
 .top {
-    border-top: 5px var(--colorPrimario) solid;
+    border-top: 2.5px var(--colorPrimario) solid;
 }
 .top-right {
-    border-top: 5px var(--colorPrimario) solid;
+    border-top: 2.5px var(--colorPrimario) solid;
     border-right: 5px var(--colorPrimario) solid;
-    border-top-right-radius: 10px;
+    /* border-top-right-radius: 10px; */
 }
 .left{
     border-left: 5px var(--colorPrimario) solid;
@@ -79,16 +115,22 @@ label {
     border-right: 5px var(--colorPrimario) solid;
 }
 .bottom {
-    border-bottom: 5px var(--colorPrimario) solid;
+    border-bottom: 2.5px var(--colorPrimario) solid;
 }
 .bottom-left {
-    border-bottom: 5px var(--colorPrimario) solid;
+    border-bottom: 2.5px var(--colorPrimario) solid;
     border-left: 5px var(--colorPrimario) solid;
-    border-bottom-left-radius: 10px;
+    /* border-bottom-left-radius: 10px; */
 }
 .bottom-right {
-    border-bottom: 5px var(--colorPrimario) solid;
+    border-bottom: 2.5px var(--colorPrimario) solid;
     border-right: 5px var(--colorPrimario) solid;
+    /* border-bottom-right-radius: 10px; */
+}
+.total_bottom-left {
+    border-bottom-left-radius: 10px;
+}
+.total_bottom-right {
     border-bottom-right-radius: 10px;
 }
 
@@ -105,7 +147,8 @@ label {
 }
 
 /*  BOTON */
-.boton-total {
+.boton-total,
+.boton-barra {
     height: 4rem;
     width: 8rem;
     padding: .5rem;
@@ -115,9 +158,16 @@ label {
     background-image: linear-gradient(45deg, var(--colorBoton3) 65%, var(--colorBoton4));
     border-radius: 10px;
 }
+.boton-barra {
+    padding: 1rem;
+    width: 10rem;
+    height: 5rem;
+    margin: 0 2rem;
+}
 
 /* FOOTER */
 footer {
+    width: 100%;
     padding: 2rem;
     font-size: 3rem;
     text-align: center;
